[package]
name = "template"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
kube = { version = "0.96.0", features = [
    "runtime"
] }
rig-core = { version = "0.9.1", features = ["all"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
